[package]
name = "unzipx"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "zip-parser" ]


[dependencies]
zip-parser = { path = "zip-parser" }

# tools
anyhow = "1"
argh = "0.1"
camino = "1"

# fast
rayon = "1"
memmap2 = "0.5"

# check
crc32fast = "1"

# compress
flate2 = "1"
zstd = { version = "0.12", features = [ "pkg-config" ] }

# encoding
encoding_rs = "0.8"
chardetng = "0.1"

# time
time = "0.3"
filetime = "0.2"
serde_json = "1.0.94"
serde = { version = "1.0.156", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"
simd-json = "0.7.0"
mimalloc = { version = "0.1.34", default-features = false }
jemallocator = "0.5.0"
zerovec = { version = "0.9.3", features = ["derive", "serde", "std", "databake", "bench", "yoke"] }
